refactor parcial