@@ -1,22 +1,18 @@
 package edu.fiuba.algo3.modelo.secciones.jugador;
-import edu.fiuba.algo3.modelo.cartas.Carta;
-import edu.fiuba.algo3.modelo.principal.NoSePuedeCumplirSolicitudDeCartas;
-import edu.fiuba.algo3.modelo.principal.UnoDeLosMazosNoCumpleRequitos;
 
-import java.util.ArrayList;
+import edu.fiuba.algo3.modelo.cartas.Carta;
+import edu.fiuba.algo3.modelo.Errores.NoSePuedeCumplirSolicitudDeCartas;
 import java.util.Collections;
 import java.util.List;
+import java.util.ArrayList;
 
-
-public class Mazo {
-    private final List<Carta> cartas;
-
+public class Mazo extends SeccionJugador {
     public Mazo(List<Carta> cartas) {
-
-        this.cartas = cartas;
+        super();
+        this.cartas.addAll(cartas);
     }
 
-    public int cantidadDeCartas(){
+    public int cantidadDeCartas() {
         return cartas.size();
     }
 
@@ -30,21 +26,17 @@ public class Mazo {
     }
 
     public void repartirCartas(int n, Mano mano) throws NoSePuedeCumplirSolicitudDeCartas {
-
         if (n > cartas.size()) {
             throw new NoSePuedeCumplirSolicitudDeCartas();
         }
 
-        List<Carta> cartasARepartir = new ArrayList<Carta>();
+        List<Carta> cartasARepartir = new ArrayList<>();
 
         for (int i = 0; i < n; i++) {
-            Carta cartaSacada = cartas.removeLast();
+            Carta cartaSacada = cartas.remove(cartas.size() - 1);
             cartasARepartir.add(cartaSacada);
         }
-
+        
         mano.agregarCartas(cartasARepartir);
-
-        //return cartasRepartidas;
     }
-
 }
